--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello Peter</h1>
     <h1>Hello Spidy</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, alias.</p>
 </body>
 </html>
